[gd_scene load_steps=9 format=3 uid="uid://dstjxfdfq6606"]

[ext_resource type="Script" path="res://Scripts/Levels/drum_session_1.gd" id="1_f3j30"]
[ext_resource type="PackedScene" uid="uid://cltmd060wny4o" path="res://Scenes/Levels/tile_map.tscn" id="2_62npc"]
[ext_resource type="PackedScene" uid="uid://0g4cxqhyjfww" path="res://Scenes/player.tscn" id="4_3nlb8"]
[ext_resource type="PackedScene" uid="uid://dwtp1ogpi4d2d" path="res://Scenes/road.tscn" id="5_811i3"]
[ext_resource type="PackedScene" uid="uid://c4bl3bke3sked" path="res://Scenes/drum_teacher.tscn" id="6_mus5s"]
[ext_resource type="PackedScene" uid="uid://dwn72018ouwf3" path="res://Scenes/UI/drum_ui.tscn" id="7_cjr2n"]
[ext_resource type="PackedScene" uid="uid://bhxkpn2he55t1" path="res://Scenes/save_system.tscn" id="7_i01o2"]
[ext_resource type="PackedScene" uid="uid://bsmhycxtja4hj" path="res://Scenes/UI/session_end.tscn" id="8_gakc7"]

[node name="DrumSession1" type="Node"]
script = ExtResource("1_f3j30")

[node name="TileMap" parent="." instance=ExtResource("2_62npc")]

[node name="Road" parent="." instance=ExtResource("5_811i3")]
position = Vector2(576, 275)
rotation = -1.5708

[node name="Player" parent="." instance=ExtResource("4_3nlb8")]
position = Vector2(576, 577)

[node name="DrumTeacher" parent="." instance=ExtResource("6_mus5s")]
position = Vector2(576, 54)

[node name="DrumUI" parent="." instance=ExtResource("7_cjr2n")]

[node name="SaveSystem" parent="." instance=ExtResource("7_i01o2")]

[node name="SessionEnd" parent="." instance=ExtResource("8_gakc7")]
process_mode = 3
visible = false
